Added loading screen .gif when waiting on server

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -68,10 +68,11 @@
         </nav> 
 
          <div class="header">CloudJS | Getting Organised</div>-->
-        <div class="container-fluid fileSection mt-3">
+        <div class="container-fluid fileSection mt-3 ">
+            <div class="container loading"><img class="mx-auto d-block img-fluid" id="loading" src="/images/transparent_loading.gif" style="padding-top:6%"> </div>
         <div id="files">
             <!-- only one account at a time can display their folders/files-->  
-
+            
         </div>
         </div>
     </div>
