--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -133,6 +133,8 @@
     <script src="/javascripts/authFb.js"></script>
     <!-- Sweet alert (Better dialog boxes) -->
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+    <!-- Client side Handlebars -->
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 
     <!----------------------  END - LINKS ---------------------------------->
 </body>
