Fixed navigation issues when traversing OneDrive files. Files now properly render

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -86,7 +86,7 @@
                         </tr>
                     </thead>
                     <tbody id="tableFiles">
-                        <tr id="" class="parentID">
+                        <tr id="{{odFiles.[0].parentReference.id}}" class="parentID"> 
                             <td><a href="#">../</td>
                             <td></td>
                             <td></td>
