--- a/public/stylesheets/interfacePage.css
+++ b/public/stylesheets/interfacePage.css
@@ -202,6 +202,14 @@ progress {
 }
 
 /* ---------------------------------------------------
+    Transfer Modal Popup
+----------------------------------------------------- */
+
+.logOutBeforeTransfer {
+          display: none;
+}
+
+/* ---------------------------------------------------
     FOOTER
 ----------------------------------------------------- */
 .page-footer {
