--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -118,6 +118,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!--- AOS ---->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- Sweet Alert CDN --> 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!---- Mdbootstrap.js
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/js/mdb.min.js"></script>----->
 
@@ -127,6 +129,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
     <!-- Firebase Initialization Javascript file -->
     <script src="/javascripts/fbInit.js"></script>
+    
     <!-- main Javascript file ---->
     <script src="/javascripts/main.js"></script>
     <!-- Authentication Javascript file -->
