Profile Page Update

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -51,8 +51,8 @@
                 <div class="google text-center ">
                 <!-- Google Section -->
                 <p class="mb-0"> Google </p>
-                <button id="authorize-button"class=" mt-0 cloudBtn">Authorize</button>
-                <button id="signout-button"class=" mt-0 cloudBtn" style="display: none;">Sign Out</button>
+                <button id="authorize-button"class=" mt-0 cloudBtn  justify-content-center">Authorize</button>
+                <button id="signout-button"class=" mt-0 cloudBtn  justify-content-center" style="display: none;">Sign Out</button>
                 
             </div>
             <div id="auth-status" style="display: inline; padding-left: 25px"></div>
@@ -153,7 +153,7 @@
 						
             <!-- Modal footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal" onclick="start();">Ok</button>
             </div>
 
         </div>
