Profile Page and Alerts

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -42,7 +42,7 @@
 
          <!-- file section -->
         <div class="container-fluid fileSection mt-3">
-        <div id="files" style="font-size:5em;">
+        <div id="files">
             <!-- only one account at a time can display their folders/files-->
 
         </div>
@@ -175,7 +175,7 @@
 
             <!-- Modal footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal" onclick="start();">Ok</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal">Ok</button>
             </div>
 
         </div>
